<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coffee order</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_cream">Add whipped cream? </string>
    <string name="order_summary_chocolate">Add Chocolate? </string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="1">%d</xliff:g></string>
    <string name="order_summary_total">Total: <xliff:g id="price" example="5">%s</xliff:g></string>
    <string name="toast_more">You can\'t order more than 100 cup of coffees</string>
    <string name="toast_less">You can\'t order less than 1 cup of coffee</string>
    <string name="email_subject">JustJava order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
